feat(registrar): add application form submit button presence validation
* adds a check when updating application form items - if there are any input fields, a submit or auto-submit button must be present, otherwise an exception is thrown
* modifies some existing tests to adhere to this requirement